--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,8 @@ dependencies {
     annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
 
     annotationProcessor "androidx.annotation:annotation:$annotationProcessorVersion"
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+
+    implementation 'org.parceler:parceler-api:1.1.12'
+    annotationProcessor 'org.parceler:parceler:1.1.12'
 }
